objects/TASKRAY__Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Role__c</fullName>
        <label>Assigned Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TaskRay_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Secondary_Name__c</fullName>
        <formula>TASKRAY__Project__r.Secondary_Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Secondary Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ref ID</label>
        <referenceTo>Kbase__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <inlineHelpText>Deadline Date</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates a TaskRay task to its predecessor using legacy dependencies. Please migrate to multiple dependencies.</description>
        <label>Dependent On (Legacy Dependencies)</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Holding</label>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                    <color>#CC6600</color>
                    <label>Prioritized</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                    <color>#3333FF</color>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Finished</fullName>
                    <color>#009900</color>
                    <label>Finished</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#DDDDDD</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#CC6600</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#3333FF</color>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__RepeatCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Every__c</fullName>
        <label>Repeat Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
        <label>Repeat Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not repeat</fullName>
                    <default>true</default>
                    <label>Does not repeat</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
        <label>Repeat Week Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDuration__c</fullName>
        <description>Task duration excluding non-working days as defined by project’s Business Hours.</description>
        <label>Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHrsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow task to be scheduled for work on non-working day as defined by the project’s Business Hours.</description>
        <label>Override Project Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDepOffset__c</fullName>
        <label>Dependency Offset (Legacy Dependencies)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <formula>IF( ISNULL(TASKRAY__trStartDate__c), 1, (TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHasScheduleConflict__c</fullName>
        <formula>TASKRAY__trLockDates__c &amp;&amp;
NOT(ISBLANK(TASKRAY__Dependent_On__c)) &amp;&amp;
TASKRAY__Deadline__c &lt;  TASKRAY__Dependent_On__r.TASKRAY__Deadline__c</formula>
        <label>Legacy Dependencies Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHidden__c</fullName>
        <formula>IF(OR(ISBLANK(TASKRAY__trHideUntil__c),TASKRAY__trHideUntil__c&lt;=TODAY()) , false, true)</formula>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntilOffset__c</fullName>
        <label>Hide Until (Days Before Start)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntil__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TASKRAY__trHideUntilOffset__c)),NOT(ISBLANK(TASKRAY__trStartDate__c))), TASKRAY__trStartDate__c - TASKRAY__trHideUntilOffset__c, null)</formula>
        <label>Hide Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents scheduling updates.</description>
        <label>Lock Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPredecessorTasksIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predecessor Tasks Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectBusinessHoursId__c</fullName>
        <description>This is a TaskRay "behind the scenes" object that stores the Project's assigned business hours.</description>
        <formula>TASKRAY__Project__r.TASKRAY__trBusinessHours__c</formula>
        <label>Project Schedule Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectSortOrder__c</fullName>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trScheduleConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TASKRAY__Project__c</field>
                <operation>equals</operation>
                <valueField>TASKRAY__trTaskGroup__c.TASKRAY__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>Cloned Tasks</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTime_Entry_Count__c</fullName>
        <label>Time Entry Count</label>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <label>TaskRay Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>TASKRAY__AllProjectTasks</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__Deadline__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TASKRAY__trCompleted__c</columns>
        <columns>TASKRAY__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Project Tasks</label>
    </listViews>
    <listViews>
        <fullName>trUnassigned_Project_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Task</fullName>
        <active>true</active>
        <label>Task</label>
    </recordTypes>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Added to TaskRay Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Assigned_Role_Blank</fullName>
        <active>true</active>
        <description>Requires 'Assigned Role' field to be filled out if record is NOT new</description>
        <errorConditionFormula>AND(
NOT( ISNEW()),
 ISBLANK(TEXT(Assigned_Role__c))

)</errorConditionFormula>
        <errorMessage>Assigned Role must be filled out for a task to be automatically assigned to a Project Team member. If Task should not be automatically assigned, please select 'Other'.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Dates_Req_when_Task_Completed</fullName>
        <active>false</active>
        <description>When a task list = Finished, the Task End Date &amp; Completion Dates are required</description>
        <errorConditionFormula>AND(

 ISPICKVAL( TASKRAY__List__c , 'Finished'),

OR(
 ISBLANK(Completion_Date__c),
 ISBLANK(TASKRAY__Deadline__c) 
)
)</errorConditionFormula>
        <errorMessage>End Date &amp; Completion Date should be entered when a Task is finished.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required_when_Task_Started</fullName>
        <active>false</active>
        <description>When a task list = Started, the Task Start Date is required</description>
        <errorConditionFormula>AND(

ISPICKVAL(TASKRAY__List__c, 'Started'),
ISBLANK(TASKRAY__trStartDate__c) 

)</errorConditionFormula>
        <errorDisplayField>TASKRAY__trStartDate__c</errorDisplayField>
        <errorMessage>Start Date should be entered when a Task is started.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Prevent_Complete_If_Dependent_Incomplete</fullName>
        <active>false</active>
        <description>This validation rule will prevent the completion of a task when its predecessor task is incomplete.</description>
        <errorConditionFormula>ISCHANGED(TASKRAY__trCompleted__c) &amp;&amp;
TASKRAY__trCompleted__c  = TRUE &amp;&amp;  ((NOT(ISNULL(TASKRAY__Dependent_On__c)) &amp;&amp;  TASKRAY__Dependent_On__r.TASKRAY__trCompleted__c = false) || TASKRAY__trPredecessorTasksIncomplete__c)</errorConditionFormula>
        <errorMessage>This task cannot be completed because it has a predecessor task which is not complete.</errorMessage>
    </validationRules>
</CustomObject>